@@ -1,5 +1,10 @@
 2008-07-19  Wakaba  <wakaba@suika.fam.cx>
 
+	* WebIDL.pm: Support for |exception| syntax.
+	(Interface->idl_text): Tentative support for inheritances.
+
+2008-07-19  Wakaba  <wakaba@suika.fam.cx>
+
 	* WebIDL.pm: Hierarchical scoped name support was broken.
 	Support for raises, setraises, and getraises syntaxes.
 
